Added the stats to the settings
