# server/routes/player.routes.ts
@@ -1,10 +1,12 @@
 import { Router } from "oak";
-import { create, getMe } from "../controllers/player.controller.ts";
+import { create, getMe, getMyStats, updateMe } from "../controllers/player.controller.ts";
 
 const router = new Router();
 
 router
   .post("/players", create)
-  .get("/players/me", getMe);
+  .get("/players/me", getMe)
+  .patch("/players/me", updateMe)
+  .get("/players/me/stats", getMyStats);
 
 export default router;
